objects/copado__Result__c.object
<CustomObject>
    <fields>
        <fullName>copado__ApexCallback__c</fullName>
        <description>This field is updated automatically by Copado.</description>
        <inlineHelpText>This field is updated automatically by Copado.</inlineHelpText>
        <label>Apex Callback</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Custom_Function_Used_Credits__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Copado Credits Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Custom_Function_Used_Minutes__c</fullName>
        <label>Custom Function Used Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to track multi-step deployment overall results.</description>
        <inlineHelpText>Used to track multi-step deployment overall results.</inlineHelpText>
        <label>Deployment</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>Results</relationshipLabel>
        <relationshipName>Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Duration__c</fullName>
        <description>Total time duration of the job. Use this value to track job performance.</description>
        <formula>IF(
  AND(
    NOT(ISBLANK(copado__Start_Time__c)),
    NOT(ISBLANK(copado__End_Time__c))
  ),
  (copado__End_Time__c - copado__Start_Time__c)*24*60*60,
  NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total time duration of the job. Use this value to track job performance.</inlineHelpText>
        <label>Duration (in seconds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__End_Time__c</fullName>
        <description>Date time when the job ended.</description>
        <inlineHelpText>Date time when the job ended.</inlineHelpText>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Function_Worker_Size__c</fullName>
        <label>Function Worker Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>XL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Function__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Copado Function that triggered this result.</inlineHelpText>
        <label>Function</label>
        <referenceTo>copado__Function__c</referenceTo>
        <relationshipLabel>Results</relationshipLabel>
        <relationshipName>Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__JobStep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Step</label>
        <referenceTo>copado__JobStep__c</referenceTo>
        <relationshipLabel>Results</relationshipLabel>
        <relationshipName>Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Job_Id__c</fullName>
        <description>Unique identifier for the jobs. This is as an External Id for mapping this result with an external job.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier for the jobs. This is as an External Id for mapping this result with an external job.</inlineHelpText>
        <label>External Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Job_Type__c</fullName>
        <label>Job API Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Link__c</fullName>
        <description>Link to open more information about the results.</description>
        <inlineHelpText>Link to open more information about the results.</inlineHelpText>
        <label>External Result Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>copado__ParentId__c</fullName>
        <label>Context ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Parent__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; IF( !ISBLANK(copado__JobStep__c), copado__JobStep__r.Id,
   IF( !ISBLANK(copado__Test__c), copado__Test__r.Id,
       IF(!ISBLANK(copado__User_Story__c), copado__User_Story__r.Id,
           IF(!ISBLANK( copado__Function__c ), copado__Function__r.Id ,&apos;&apos;)))
  ) , 
IF( !ISBLANK(copado__JobStep__c), copado__JobStep__r.Name,
   IF( !ISBLANK(copado__Test__c), copado__Test__r.Name,
       IF(!ISBLANK(copado__User_Story__c), copado__User_Story__r.Name,
           IF(!ISBLANK( copado__Function__c ), copado__Function__r.Name ,&apos;&apos;)))
  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Progress_Status__c</fullName>
        <description>This status is used to track the current job activity.</description>
        <inlineHelpText>This status is used to track the current job activity.</inlineHelpText>
        <label>Progress Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to track job results triggered from promotion events.</description>
        <inlineHelpText>Used to track job results triggered from promotion events.</inlineHelpText>
        <label>Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>Results</relationshipLabel>
        <relationshipName>Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Result_Data__c</fullName>
        <label>Result Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Start_Time__c</fullName>
        <description>Date time when the job started.</description>
        <inlineHelpText>Date time when the job started.</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <defaultValue>&quot;Not Started&quot;</defaultValue>
        <description>Current status of the result. Confirms if the result is pending or completed.</description>
        <inlineHelpText>Current status of the result. Confirms if the result is pending or completed.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test</label>
        <referenceTo>copado__Test__c</referenceTo>
        <relationshipLabel>Results</relationshipLabel>
        <relationshipName>Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Timeout__c</fullName>
        <label>Timeout (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User story that originated the result.</description>
        <inlineHelpText>User story that originated the result.</inlineHelpText>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Result</relationshipLabel>
        <relationshipName>Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Result</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Job_Type__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Link__c</columns>
        <columns>copado__Description__c</columns>
        <columns>copado__Error_Message__c</columns>
        <columns>copado__Error_Code__c</columns>
        <columns>copado__Job_Id__c</columns>
        <columns>copado__User_Story__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R{00000}</displayFormat>
        <label>Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>